tests/fcode/errors/err_duplicate_procedure_module.f90
module m
contains
  subroutine work(n)
    integer, intent(in) :: n
  end subroutine work
  subroutine work(n)
    integer, intent(in) :: n
  end subroutine work
end module m
